--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
     src="https://code.jquery.com/jquery-3.3.1.min.js"
     integxrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
     crossorigin="anonymous"></script>
-    
-   
+
+    <link href="https://fonts.googleapis.com/css?family=Coiny" rel="stylesheet">
     <link rel="stylesheet" href="./assets/css/styles.css">
 </head>
 
 <body>
     <div id="container">
         <h1>ToDo List</h1>
-        <input type="text">
+        <input type="text" placeholder="Next Task">
 
         <ul>
             <li><span>X</span> Conquer the World</li>
