Final revisions completed. App finished.

--- a/index.html
+++ b/index.html
@@ -6,20 +6,20 @@
     src="https://code.jquery.com/jquery-3.3.1.min.js"
     integxrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
     crossorigin="anonymous"></script>
-
+    
     <link href="https://fonts.googleapis.com/css?family=Coiny" rel="stylesheet">
     <link rel="stylesheet" href="./assets/css/styles.css">
 </head>
 
 <body>
     <div id="container">
-        <h1>ToDo List</h1>
+        <h1>ToDo List <img id="checkList" src="https://img.icons8.com/metro/26/000000/todo-list.png"></h1>
         <input type="text" placeholder="Next Task">
 
         <ul>
-            <li><span>X</span> Conquer the World</li>
-            <li><span>X</span> Buy Mom's Birthday Gift</li>
-            <li><span>X</span> Go To School</li>
+            <li><span><img class="deleteX" src="https://img.icons8.com/metro/26/000000/close-window.png"></span>Conquer the World</li>
+            <li><span><img class="deleteX" src="https://img.icons8.com/metro/26/000000/close-window.png"></span>Buy Mom's Birthday Gift</li>
+            <li><span><img class="deleteX" src="https://img.icons8.com/metro/26/000000/close-window.png"></span>Go To School</li>
         </ul>
     </div>
 
